--- a/css/less/main.less
+++ b/css/less/main.less
@@ -1,7 +1,7 @@
+@import "./variables/breakpoints.less";
 @import "./variables/vars";
 @import "./variables/common.less";
-@import "./variables/breakpoints.less";
-@import "./less/header.less";
-@import "./less/nav.less";
-@import "./less/main-content.less";
-@import "./less/footer.less";
+@import "header.less";
+@import "nav.less";
+@import "main-content.less";
+@import "footer.less";
