--- a/css/less/header.less
+++ b/css/less/header.less
@@ -1,6 +1,7 @@
 .bem_main-header {
     margin: 5px 0;
-    .display-flex;  
+    .display-flex; 
+    flex-direction: column;
     &__logo {
         margin-right: 5px;
         align-self: center;
@@ -9,14 +10,15 @@
     &__top-ads {
         flex: 1;    
     }
+    &__top-ads-header {
+        width: @mobile-body-width;
+    }
 }
-@media @MQ_S {
-    .bem_main-header {
-        margin: 5px 0;
-        .display-flex;
-        flex-direction: column;  
+@media @MQ_L {
+    .bem_main-header {       
+        flex-direction: row;         
         &__top-ads-header {
-            width: 96%;
+            width: @desktop-body-width;
         }         
     }
 }
