--- a/css/less/main-content.less
+++ b/css/less/main-content.less
@@ -1,50 +1,60 @@
 .bem_container {
     .display-flex;
+    flex-direction: column;
     line-height: 25px;   
-    margin-top: 5%;
-}
-.bem_main-column {   
-    flex-basis: 70%;
-   
-}
-.bem_right-column {
-    flex-basis: 30%;        
-}
-.bem_main-column__article-content {   
-    padding: 3% 5%;
-    margin-bottom: 10px;
-    .border-radius(5px);
-    background-color: #fff;
-}
-.bem_main-column__article-link {
-    text-decoration: none;
-    &:hover {
-        text-decoration: underline;
-        color: #cf5c3f;
+    margin-top: 15px;
+    @media @MQ_L{
+        flex-direction: row;       
     }
 }
-.bem_main-column__post-info {
-    font-style: italic ;
+@media @MQ_L{
+  
+    .bem_main-column {
+        width: 70%;
+    }
+    .bem_right-column {
+        width: 30%;
+        &__sidebar {
+            margin-left: 20px;
+        }
+    }
+}
+.bem_main-column{
+    &__article-content {
+        padding: 3% 5%;
+        margin-bottom: 10px;
+        .border-radius(5px);
+        background-color: #fff;
+    }
+    &__article-link {
+        text-decoration: none;
+        color: red;
+        @media @MQ_S{
+            color: pink;
+        }
+        @media @MQ_M {
+            color: rgb(255, 255, 0);
+        }
+        @media @MQ_L {
+            width: 70%;
+            color: purple;
+        }
+        &:hover {
+            text-decoration: underline;
+            color: #cf5c3f;
+        }
+    }    
+    &__post-info {
+        font-style: italic ;  
+    }
 }
 .bem_right-column__sidebar {
     height: 30%;
-    background-color: #fff;
-    margin-left: 10%;
+    background-color: #fff;    
     .border-radius(5px);
-    padding: 2% 10%;
+    padding: 2% 5%;
     margin-bottom: 10px;
 }
-@media @MQ_S {
-    .bem_container {
-        flex-direction: column;       
-    }
-    .bem_main-column {
-        width: 100%;
-    }
-    .bem_right-column {
-        width: 100%;
-        &__sidebar {
-            margin-left: 0;
-        }
-    }
+@media @MQ_M-L {
+    padding: 2% 10%;
 }
