--- a/css/less/variables/common.less
+++ b/css/less/variables/common.less
@@ -18,10 +18,10 @@ body {
 }
 .body {
     margin: 0 auto;
-    width: @desktop-body-width;
+    width: @mobile-body-width;
 }
-@media @MQ_S{
+@media @MQ_M-L{
     .body {
-        width: @mobile-body-width;
+        width: @desktop-body-width;
     }
 }
